--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+1.1.0.6 (2015-05-30):
+    - Moved VERSION to CHANGELOG
 1.1.0.1 (2012-01-28):
     - Corrected documentation for multicomposition. (Thanks, Joachim Breitner.)
 1.1.0 (2012-01-28):
