--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-1.1.0.7 (2021-10-16):
+1.1.0.8 (2021-10-17):
+    - Updating emails/urls
     - Started GithubActions for CI
 1.1.0.6 (2015-05-30):
     - Moved VERSION to CHANGELOG
