--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.1.0.11 (2023-03-19):
+    - Added `Tested-With: GHC == 9.6.1` (didn't actually need to
+      nudge the upper bound on 'base', because it's already lenient)
 1.1.0.10 (2022-08-28):
     - Added `Tested-With: GHC == 9.4.1` (didn't actually need to
       nudge the upper bound on 'base', because it's already lenient)
